# srenity

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
logs/: .gitkeep
src/: __init__.py
src/agent/: __init__.py  nodes.py  workflow.py
src/api/: __init__.py  endpoints.py  main.py
src/data/: __init__.py  processors.py  raw_log_processor.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  opik_evaluator.py  scenarios.py  schemas.py
src/models/: __init__.py  schemas.py
